# photon

./: CMakeLists.txt
examples/: CMakeLists.txt  easywin32.h
examples/collision_detection/: main.cpp
examples/phong_scene/: CMakeLists.txt  launch_params.h  main.cpp  phong_scene.cu
include/photon/: accel_struct.h  build_input.h  device_context.h  fwd.h  macros.h  pipeline.h  sbt_record.h
src/: accel_struct_builder_impl.cu  accel_struct_builder_impl.h  accel_struct_impl.cpp  accel_struct_impl.cu  accel_struct_impl.h  denoiser_impl.h  device_context.cpp  pipeine_impl.cpp  pipeline_impl.cpp  pipeline_impl.h
tests/: accel_struct_test.cpp  denoiser_test.cpp  pipeline_test.cpp
